plugins {
  id 'com.github.hierynomus.license' version '0.16.1'
  id 'org.febit.standard-java' version '1.1.0-SNAPSHOT'
  id 'org.febit.standard-maven-publish' version '1.1.0-SNAPSHOT'
  id 'org.febit.codegen-module' version '1.1.0-SNAPSHOT'
}

group 'org.febit.rectify'
version '1.8.0-SNAPSHOT'

ext {
  versions = [
      febitCommons: '3.0.0-SNAPSHOT',
      wit         : '2.7.0-beta',
      calcite     : '1.34.0',
      sqlline     : '1.12.0',
      flink       : '1.17.0',
  ]
}

allprojects {
  apply plugin: 'com.github.hierynomus.license'


  group rootProject.group
  version rootProject.version

  repositories {
    maven { url "https://maven.aliyun.com/repository/central" }
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
  }

  standardMavenPublish {
    pom {
      customPom(it)
    }
  }

  codegenModule {
    defaultTemplate = fromFile("$rootDir/etc/module.java.tmpl")
  }

  license {
    mapping {
      java = 'SLASHSTAR_STYLE'
    }
    include '**/*.java'
    strictCheck false
    skipExistingHeaders false
    header rootProject.file('etc/license-header.txt')
  }

}

configure(subprojects.findAll {
  !it.name.endsWith('-bom')
}) {
  apply plugin: 'java-library'

  java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    withSourcesJar()
  }

  dependencyManagement {
    imports {
      mavenBom "org.febit:febit-commons-dependencies:${versions.febitCommons}"
    }
    dependencies {
      dependencySet(group: 'org.apache.flink', version: "${versions.flink}") {
        entry "flink-table-common"
        entry "flink-streaming-java"
        entry "flink-clients"
      }
      dependency "org.febit.wit:wit-core:${versions.wit}"
      dependency "org.apache.avro:avro:${versions.avro}"
      dependency "org.apache.calcite:calcite-core:${versions.calcite}"
      dependency "sqlline:sqlline:${versions.sqlline}"
    }
  }

  test {
    useJUnitPlatform()
  }

  dependencies {
    compileOnly 'org.febit:febit-annotations-optional'
    testCompileOnly 'org.febit:febit-annotations-optional'

    testImplementation 'org.febit:febit-test-common'
    testRuntimeOnly 'org.slf4j:slf4j-simple'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  }
}

def customPom(MavenPom pom) {
  pom.with {
    url = 'https://github.com/febit/febit-rectify'
    organization {
      name = 'Febit'
      url = 'https://github.com/febit'
    }
    licenses {
      license {
        name = 'Apache License, Version 2.0'
        url = 'https://github.com/febit/febit-rectify/blob/master/LICENSE.txt'
        distribution = 'repo'
      }
    }
    scm {
      url = 'https://github.com/febit/febit-rectify'
      connection = 'scm:git:https://github.com/febit/febit-rectify.git'
      developerConnection = 'scm:git:https://github.com/febit/febit-rectify.git'
    }
    issueManagement {
      system = 'GitHub'
      url = 'https://github.com/febit/febit-rectify/issues'
    }
    developers {
      developer {
        id = 'zqq'
        name = 'Zhu Qingqing'
        email = 'zqq@febit.org'
        timezone = '+8'
      }
    }
  }
}
